# android-platform

aosp/device/generic/car/: sdk_car_x86_64.mk
aosp/device/generic/goldfish/board/kernel/: x86_64.mk
aosp/hardware/example_service/: example_service.mk
aosp/hardware/example_service/app/: Android.bp  AndroidManifest.xml
aosp/hardware/example_service/app/res/layout/: activity_main.xml
aosp/hardware/example_service/app/src/com/client/exampleapp/: ExampleApp.java  ExampleListenerFromApp.java
aosp/hardware/example_service/interfaces/: framework_compatibility_matrix.xml
aosp/hardware/example_service/interfaces/aidl/: Android.bp
aosp/hardware/example_service/interfaces/aidl/aidl_api/com.example.api.aidl/current/com/example/api/aidl/: IExampleListener.aidl  IExampleService.aidl
aosp/hardware/example_service/interfaces/aidl/com/example/api/aidl/: IExampleListener.aidl  IExampleService.aidl
aosp/hardware/example_service/service/: Android.bp  com.service.exampleservice.rc  com.service.exampleservice.xml
aosp/hardware/example_service/service/com/service/exampleservice/: service.cpp
aosp/hardware/example_service/service/com/service/exampleservice/inc/: DriverHandler.hpp  ExampleService.hpp
aosp/hardware/example_service/service/com/service/exampleservice/src/: DriverHandler.cpp  ExampleService.cpp
kernel/common-modules/virtual-device/: BUILD.bazel
kernel/common-modules/virtual-device/example_driver/: BUILD.bazel  Makefile  app.c
kernel/common-modules/virtual-device/example_driver/inc/: config.h  device_file_handler.h  proc_file_handler.h  signal_handler.h  system_call_handler.h
kernel/common-modules/virtual-device/example_driver/src/: device_file_handler.c  main.c  proc_file_handler.c  signal_handler.c  system_call_handler.c
kernel/common-modules/virtual-device/test_driver/: BUILD.bazel  main.c
