load("//build/kernel/kleaf:kernel.bzl", "ddk_module")

filegroup(
    name = "test_driver_sources",
    srcs = glob([
        "*.c",
    ]),
)

ddk_module(
    name = "test_driver",
    srcs = [":test_driver_sources"], 
    out = "test_driver.ko",
    kernel_build = "//common-modules/virtual-device:virtual_device_x86_64",
    deps = ["//common:all_headers_x86_64"],
    visibility = [
        "//common-modules/virtual-device:__pkg__", 
        "//common-modules/virtual-device/example_driver:__pkg__",
    ],
)


